@@ -1,3 +1,7 @@
+2013-07-29  Larry Pezzaglia  <lmpezzaglia@lbl.gov>
+
+	* kernel/chos_lkm.c: Improve several log messages
+
 2013-07-27  Larry Pezzaglia  <lmpezzaglia@lbl.gov>
 
 	* build_rpm, conf/Makefile.am, configure.ac, kernel/dkms.conf,
